filter and design updates

--- a/ExpenseTracker/Components/Layout/MainLayout.razor
+++ b/ExpenseTracker/Components/Layout/MainLayout.razor
@@ -13,7 +13,7 @@
         @if (authStateService.IsAuthenticated())
         {
             <div class="top-row px-4">
-                <a href="/" target="_blank">Profile</a>
+                <a href="/" target="_blank">Account</a>
             </div>
         }
         <article class="content px-4">
